samples/_failures_safe/1761174837_f43c4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2176d40.c: In function ‘main’:
./samples/SAFE/__tmp_e2176d40.c:147:16: error: missing terminating " character
  147 |         printf("4. Transpose matrix
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e2176d40.c:147:9: error: expected expression at end of input
  147 |         printf("4. Transpose matrix
      |         ^~~~~~
./samples/SAFE/__tmp_e2176d40.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2176d40.c:147:9: error: expected declaration or statement at end of input
